# haskonf

./: .gitignore  LICENSE  README.md  haskonf-usage.hs  haskonf.cabal  project.nix  shell.nix
Haskonf/: Builder.hs  Runner.hs
src/: Haskonf.hs
test/: .#Main.hs  Main.hs
test/Haskonf/: HaskonfSpec.hs
