Name:               haskonf
Version:            0.0.1
License:            BSD2
License-File:       LICENSE
Author:             Jonn Mostovoy
Synopsis:           Reflective configuration library
Description:
            A library to configure Haskell applications with Haskell. Akin to XMonad and Hakyll.

Cabal-Version:  >=1.10
Build-Type:     Simple

Library
  Build-Depends: base,
                 time,
                 directory,
                 unix,
                 filepath,
                 process,
                 extensible-exceptions

  Hs-Source-Dirs:      src
  GHC-Options:       -Wall
  Exposed-Modules: Haskonf

Executable usetest
  Build-Depends: base
  Hs-source-dirs:  test
  GHC-Options:    -Wall
  Main-is:      Main.hs
