Name:               haskonf
Version:            0.0.1
License:            BSD2
License-File:       LICENSE
Author:             Jonn Mostovoy
Synopsis:           Reflective configuration library
Description:
            A library to configure Haskell applications with Haskell. Akin to XMonad and Hakyll.

Cabal-Version:  >=1.10
Build-Type:     Simple

Data-Files: haskonf-usage.hs

Library
  Build-Depends: base,
                 time,
                 directory,
                 unix,
                 filepath,
                 process,
                 FindBin,
                 extensible-exceptions

  Hs-Source-Dirs:      src
  GHC-Options:       -Wall
  Exposed-Modules: Haskonf
  Other-Modules: Paths_haskonf

Executable usetest
  Build-Depends: base,
                 haskonf,
                 FindBin
  Hs-source-dirs:  test
  GHC-Options:    -Wall
  Main-is:      Main.hs
  Other-Modules: Paths_haskonf
